[package]
name = "mqttools"
version = "0.1.0"
authors = ["Igor Rudym <irudym@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.9.1"
clap = "2.33.3"
uuid = { version = "0.8", features = ["serde", "v4"] }